gateway/databases/demo-postgres-gateway/tls-termination/08-tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres-standard-clients
  namespace: demo-db-standard
spec:
  parentRefs:
    - name: postgres-std-gateway
      namespace: default
      sectionName: postgres
  rules:
    - backendRefs:
        - name: pgbouncer
          port: 5432
